[gd_scene load_steps=4 format=3 uid="uid://cv0ssxjh5kky6"]

[ext_resource type="Theme" uid="uid://b2cj8uyia4b4p" path="res://theme/player_propety_panel.tres" id="1_77dlf"]
[ext_resource type="Script" path="res://scripts/ui/hud/player_property_panel.gd" id="2_dhn35"]
[ext_resource type="Texture2D" uid="uid://bbxallwadqmji" path="res://icon.svg" id="3_ud5je"]

[node name="PlayerPropertyPanel" type="Panel"]
anchors_preset = -1
anchor_right = 0.237
anchor_bottom = 1.0
offset_right = 0.039978
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_77dlf")
script = ExtResource("2_dhn35")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ud5je")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Classes" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "barbarin"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Timer" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "1.11.11"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Panel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Background" type="TextureRect" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ud5je")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player" type="GridContainer" parent="VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Health" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Player"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "health"
vertical_alignment = 1

[node name="HealthValue" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Player"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "10/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="End" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Player"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "End"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndValue" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Player"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndRecover" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Player"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "EndRecover"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndRecoverValue" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Player"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndRecoverSpeed" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Player"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "EndRecoverSpeed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndRecoverSpeedValue" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Player"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoveSpeed" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Player"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "MoveSpeed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoveSpeedValue" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Player"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoveSpeedMultiple" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Player"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "MoveSpeedMultiple"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoveSpeedMultipleValue" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Player"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Weapon" type="GridContainer" parent="VBoxContainer/Panel/VBoxContainer"]
visible = false
layout_mode = 2
columns = 2

[node name="AttackDamage" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Weapon"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "AttackDamage"
vertical_alignment = 1

[node name="AttackDamageValue" type="Label" parent="VBoxContainer/Panel/VBoxContainer/Weapon"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "20"
horizontal_alignment = 1
vertical_alignment = 1
